<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.fragment.addtask.AddEditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/add_edit_task_layout_margin"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_input_layout_margin"
            android:layout_marginStart="@dimen/add_task_input_layout_margin"
            android:layout_marginEnd="@dimen/add_task_input_layout_margin"
            android:hint="@string/add_title_hint"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:endIconMode="clear_text"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:maxLength="25"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_input_layout_margin"
            android:layout_marginStart="@dimen/add_task_input_layout_margin"
            android:layout_marginEnd="@dimen/add_task_input_layout_margin"
            android:hint="@string/add_task_pick_date_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_pick_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="top"
                android:inputType="none"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/add_task_important_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/add_task_input_layout_margin"
            android:layout_marginStart="@dimen/add_task_input_layout_margin"
            android:layout_marginEnd="@dimen/add_task_input_layout_margin"
            android:text="Important task" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/fab"
        android:src="@drawable/fab_done"
        app:fabSize="normal" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>